root@fau2-7aad:/# echo 5 >/sys/class/gpio/export
root@fau2-7aad:/# echo out >/sys/class/gpio/gpio5/direction
root@fau2-7aad:/# echo 1 >/sys/class/gpio/gpio5/value
root@fau2-7aad:/# mesh-led-controller random
-----------------------------------------------------------
https://yhbt.net/lore/all/56AB6103.6010702@samsung.com/T/

ACTIONS:
    0001. Обновлен mesh-wizard
        * добавлен выбор протокола маршрутизации (+при выборе подгружаются нужные luci-app)
    0002. добавлена настройка сетевых профилей и исправлена настройка внутренних интерфейсов lan/wan после lime-config
    0003. Исправлен luci-app-batman-adv (теперь работает)
    0004. Написаны консольные утилиты для работы с сетью и rpc API:
        mesh-hosts-resolve-libre-bat   # можно использовать, чтобы быстро посмотреть всех mesh-устройств в сети и их IP
        mesh-hosts-resolve-libre-bmx7  # то же, что и mesh-hosts-resolve-libre-bat, только для bmx7(если выбран в визарде)
        mesh-network-profile
        mesh-shared-state-manager
        mesh-wan-conn-status
    0005. hostname от всех нод распределяются по сети (на всякий случай сделан пинок mesh-shared-state-manager)
    0006. Добавлен shared-state для всех клиентов, с каждой ноды видно клиентов по всей сети
    ----
    0007. Дополнен скрипт настройки радиомодулей (поддержка внешних усилителей, опционально)
    0008. Подправлена сетевая настройка (полоса выставлена шире)
    0009. Собран отдельный пакет, собирающий все утилиты и конфиги для cuman-ac12x + libremesh + bat+bmx
    0010. Разделены профили для ac12g и ac12m(для дальнейшей правки DTS и включения sn3218)
    0011. В баннер включена информация по профилю и дате релиза
    0012. Исправлены поддержки модели в DTS, теперь предупреждений нет при перезаливке прошивки


grep -Rns "cuman:green:power-g" ./*
./build_dir/target-mipsel_24kc_musl/linux-ramips_mt7621/base-files/.pkgdir/base-files/bin/sysdef:88:    uci set system.@led[0].sysfs='cuman:green:power-g'