@@ -5,5 +5,5 @@
 |----------------------------------------------------------|
 | Based on: %D %V, %C
 |----------------------------------------------------------|
-| Release info: 2023-12-20, ramips-cuman_ac12m-libremesh
+| Release info: 2023-12-22, ramips-cuman_ac12m-libremesh
 |----------------------------------------------------------|
