@@ -1,1 +1,1 @@
-obj-${CONFIG_SN3218} += sn3218.o
+obj-$(CONFIG_SN3218) += sn3218.o
